Finalizacao do projeto

--- a/AT_Net_Q7/Views/Livro/Criar.cshtml
+++ b/AT_Net_Q7/Views/Livro/Criar.cshtml
@@ -2,7 +2,8 @@
 
 <h1>Adicionar Novo Livro</h1>
 
-<form asp-action="Create">
+<form asp-action="Criar">
+  
     <div class="form-group">
         <label asp-for="Titulo"></label>
         <input asp-for="Titulo" class="form-control" />
@@ -15,4 +16,3 @@
     </div>
     <button type="submit" class="btn btn-primary">Salvar</button>
 </form>
-
