--- a/AT_Net_Q7/Views/Livro/Index.cshtml
+++ b/AT_Net_Q7/Views/Livro/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @Model List<AT_Net_Q7.Models.Livro>
     <h2>Lista de livros </h2>
-
+    <a asp-action="Criar" class="btn btn-primary">Adicionar Novo Livro</a>
     <table class="table">
         <thead>
             <tr>
@@ -20,15 +20,11 @@
                             <td>@livro.Autor</td>
 
                                  <td>
-                      <a asp-action="Indice" asp-route-id="@livro.Id" class="btn btn-danger">Consultar</a>
-                                    </td>
-                    </tr>
-                        <td>
-                        <a asp-action="Criar" asp-route-id="@livro.Id" class="btn btn-danger">Incluir</a>
-                                    </td>
-                            <td>
+                      <a asp-action="Indice" asp-route-id="@livro.Id" class="btn btn-danger">Consultar</a>           
+                        <a asp-action="Criar" asp-route-id="@livro.Id" class="btn btn-danger">Incluir</a>  
                         <a asp-action="Delete" asp-route-id="@livro.Id" class="btn btn-danger">Excluir</a>
-                            </td>          
+                            </td>     
+                            </tr>
             }
         </tbody>
 
